[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/textures/ilha2.bmp" type="Texture" id=1]
[ext_resource path="res://Assets/textures/ilha.bmp" type="Texture" id=2]
[ext_resource path="res://Assets/textures/blueframe2.png" type="Texture" id=3]
[ext_resource path="res://Historia.gd" type="Script" id=4]
[ext_resource path="res://Assets/textures/button.bmp" type="Texture" id=5]
[ext_resource path="res://Assets/textures/fonts/RunicFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/textures/fonts/handwrite.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/textures/texture/Worn-Paper-Texture.jpg" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 700, 906 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 800, 600 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
normal_map = ExtResource( 1 )
region_rect = Rect2( 0, 0, 365, 107 )

[node name="Historias" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.501678
margin_top = 0.00338745
margin_right = -2.49829
margin_bottom = -5.99658
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_right = 2.99994
margin_bottom = -6.10352e-05
rect_min_size = Vector2( 51, 30 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Inicio" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Inicio" type="RichTextLabel" parent="ViewportContainer/Inicio"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você acorda numa ilha e não sabe como você segou nessa ilha, mas você vê três caminhos, um caminho que leva pra dentro da ilha, outro que vai em direção a uma caverna e outro que vai para um barco encalhado."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Limbo" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Limbo" type="RichTextLabel" parent="ViewportContainer/Limbo"]
visible = false
margin_left = 150.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você morreu, mas de alguma forma está ciente dessa situação. 

Você percebe que está num lugar que tu nunca viu semelhante a um limbo.

Dois caminhos se apresentam: Um retorna para a ilha e outro para o inevitável fim (volta para o menu inicial)."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caverna" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Caverna" type="RichTextLabel" parent="ViewportContainer/Caverna"]
visible = false
margin_left = 150.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você entra na caverna, caminha um pouco e vê dois caminhos: 

Em um deles, um dragão negro que está dormindo, em outro existe uma passagem para dentro da caverna.

Você vai em direção ao dragão para atacá-lo, vai pra dentro da caverna ou retorna por onde tu vieste."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dentroIlha" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="dentroIlha" type="RichTextLabel" parent="ViewportContainer/dentroIlha"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Indo pra dentro da ilha você vê dois caminhos: Indo para dentro da ilha você vê dois caminhos: Um caminho de vegetação morta e outro leva para uma floresta.

Ou você pode retornar por onde veio."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acambamentoCaverna" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="acambamentoCaverna" type="RichTextLabel" parent="ViewportContainer/acambamentoCaverna"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Depois de muito caminhar, você encontra um acampamento abandonado.
Você decide dormir um pouco.

Ao acordar, você caminha por mais algumas horas vê uma saída da caverna."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bifurcaçao" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Bifurcaçao" type="RichTextLabel" parent="ViewportContainer/Bifurcaçao"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Nessa bifurcação você vê três caminhos: 

O primeiro em direção a uma caverna.

O segundo levará na direção a floresta.

O terceiro encaminha para uma cabana."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Historia" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Panel" type="Panel" parent="ViewportContainer/Historia"]
show_behind_parent = true
light_mask = 3
anchor_left = 0.233
anchor_top = 0.233
anchor_right = 0.391
anchor_bottom = 0.233
margin_left = -50.0
margin_top = 40.2
margin_right = 400.0
margin_bottom = 261.2
custom_styles/panel = SubResource( 1 )

[node name="Carta" type="RichTextLabel" parent="ViewportContainer/Historia"]
margin_left = 200.0
margin_top = 180.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[fade start=1 length=350][color=black]Escrevo esta carta pra contar minha história, mas contarei rápido pois estou em uma tempestade: Eu acordei em uma ilha, depois de caminhar muito eu achei um bilhete que me levou pro cais e a um barco que usei pra sair da ilha...[/color][/fade]
"
meta_underlined = false
tab_size = 10
text = "Escrevo esta carta pra contar minha história, mas contarei rápido pois estou em uma tempestade: Eu acordei em uma ilha, depois de caminhar muito eu achei um bilhete que me levou pro cais e a um barco que usei pra sair da ilha...
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Historia" type="RichTextLabel" parent="ViewportContainer/Historia"]
anchor_top = 0.129
anchor_bottom = 0.28
margin_left = 200.0
margin_top = 360.0
margin_right = 1000.0
margin_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/bold_font = ExtResource( 6 )
meta_underlined = false
tab_size = 10
text = "Depois de ler você acha uma espada ao lado da carta e decide retornar de onde veio.  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cabana" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Cabana" type="RichTextLabel" parent="ViewportContainer/Cabana"]
visible = false
margin_left = 150.0
margin_top = 200.0
margin_right = 850.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você entra na cabana e vê uma cama.

Você dorme na cama e no outro dia você percebe um bilhete.

No bilhete está escrito que existe um barco no cais atrás da cabana. 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="barcoEncalhado" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="barcoEncalhado" type="RichTextLabel" parent="ViewportContainer/barcoEncalhado"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "No navio você vê uma carta e nela está escrito a sua história, explicando detalhes de como você chegou nessa ilha."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monstro" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Monstro" type="RichTextLabel" parent="ViewportContainer/Monstro"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Quando você se aproxima do dragão ele acorda.

Como você não carrega nenhuma arma, o monstro vence."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monstro2" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Monstro2" type="RichTextLabel" parent="ViewportContainer/Monstro2"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Quando você se aproxima do dragão ele acorda.

Carregando uma arma em mãos, você derrota o monstro."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saidaCaverna" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="saidaCaverna" type="RichTextLabel" parent="ViewportContainer/saidaCaverna"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Saindo da caverna você encontra uma bifurcaçao."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acampamentoFloresta" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="acambamentoFloresta" type="RichTextLabel" parent="ViewportContainer/acampamentoFloresta"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você encontra um acampamento abandonado e resolve dormir.

Na manhã seguinte você caminha mais um pouco e vê uma bifurcação."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="areiaMovediça" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="areiaMovediça" type="RichTextLabel" parent="ViewportContainer/areiaMovediça"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você encontra areia movediça,

É impossível lutar, você morre."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="areiaMovediça2" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="areiaMovediça2" type="RichTextLabel" parent="ViewportContainer/areiaMovediça2"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você encontra areia movediça.

Com o galho em mãos, você se salva."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caminhoCaverna" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="caminhoCaverna" type="RichTextLabel" parent="ViewportContainer/caminhoCaverna"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você observa 3 caminhos:

No primeiro você irá na direção de um dragão.

No segundo para dentro da caverna.

No último irá para a saída da caverna.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cais" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Cais" type="RichTextLabel" parent="ViewportContainer/Cais"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você vê o cais e encontra o barco atracado.

Você caminha na direção do barco."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barco" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Barco" type="RichTextLabel" parent="ViewportContainer/Barco"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "O barco está vazio.

A chave do barco se encontra na ignição.

É hora de partir."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Altomar" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Altomar" type="RichTextLabel" parent="ViewportContainer/Altomar"]
visible = false
margin_left = 200.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você sai da ilha, mas em alto-mar você entra numa tempestade.
Você decide escrever uma carta contando sua história.
A tempestade alcança o barco e o destrói.
Você acorda novamente na ilha.
O ciclo continua...
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Win" type="RichTextLabel" parent="ViewportContainer/Win"]
visible = false
margin_left = 250.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "Você conseguiu escapar da ilha."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monstroMorto" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="monstroMorto" type="RichTextLabel" parent="ViewportContainer/monstroMorto"]
visible = false
margin_left = 250.0
margin_top = 150.0
margin_right = 800.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
tab_size = 10
text = "
O dragão está morto aos seus pés.
Você o vasculha a sala do dragão e encontra um galho.
Você pode levar o galho ou deixá-lo."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pegar" type="Button" parent="ViewportContainer/monstroMorto"]
visible = false
anchor_left = 0.34
anchor_top = 0.825
anchor_right = 0.34
anchor_bottom = 0.825
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource( 5 )
flat = true

[node name="Label" type="Label" parent="ViewportContainer/monstroMorto/pegar"]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.4
anchor_bottom = 0.4
text = "pegar"

[node name="deixar" type="Button" parent="ViewportContainer/monstroMorto"]
visible = false
anchor_left = 0.65
anchor_top = 0.825
anchor_right = 0.65
anchor_bottom = 0.825
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource( 5 )
flat = true

[node name="Label" type="Label" parent="ViewportContainer/monstroMorto/deixar"]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.4
anchor_bottom = 0.4
text = "deixar"

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.94389
margin_bottom = 1.94391
rect_pivot_offset = Vector2( -293.298, 234.206 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Panel"]
anchor_left = 0.441
anchor_top = 0.04
anchor_right = 0.548
anchor_bottom = 0.194
margin_left = -1.58398
margin_right = 0.848083
margin_bottom = 1.6
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 357.0
margin_top = 478.0
margin_right = 660.0
margin_bottom = 548.0
action_mode = 0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Panel/Button"]
anchor_right = 0.972
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 3.0
margin_right = 0.483978
margin_bottom = -5.0
text = "Continuar"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="ViewportContainer/monstroMorto/pegar" to="." method="_on_pegar_pressed"]
[connection signal="pressed" from="ViewportContainer/monstroMorto/deixar" to="." method="_on_deixar_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
